styles.css
@font-face {
    font-family: 'Playfair-Display';
    src: url('assets/fonts/Playfair-Display/PlayfairDisplay-Regular.woff2') format('woff2'),
        url('assets/fonts/Playfair-Display/PlayfairDisplay-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Roboto';
    src: url('assets/fonts/Roboto/Roboto-Regular.woff2') format('woff2'),
        url('assets/fonts/Roboto/Roboto-Regular.woff') format('woff');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

/* breakpoint at 600px for mobile, 1000px for tablet */

:root {
    --secondary-color: #0090b3;
    --min-header-height: 350px;
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-size: 1rem;
    color: #222;
}

h1, h2, h3, div {
    font-family: "Playfair-Display", 'Times New Roman', serif;
}

h1 {
    font-size: 2.5rem;
}

h2 {
    font-size: 1.7rem;
}

h3 {
    font-size: 1.1rem;
}

p {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
}

a {
    text-decoration: none;
}

body {
    display: flex;
    justify-content: center;
    background-color: #222;
}

.content {
    max-width: 1100px;
    min-height: 100vh;
    background-color: white;

    overflow: hidden;
    position: relative;
}

/* header */

header {
    min-height: var(--min-header-height);
    padding: 80px 50px 80px;
    
    isolation: isolate;     /* explicit stacking context */
}

.diagonal-deco {
    background-color: var(--secondary-color);
    width: 1200px;
    height: 480px;

    position: absolute;
    left: 0;
    top: 0;
    transform-origin: left bottom;
    transform: rotate(-15deg);
    z-index: -1;
}

.self-desc {
    min-height: var(--min-header-height);
    background-color: white;
    position: relative;
}

.floated-left {
    float: left;
    /* margins calc so that text on right wrap properly after image is scaled */
    margin-right: calc((0.2 * 320px) + 25px);
    margin-bottom: calc(0.1 * var(--min-header-height));
    position: relative;
}

.floated-left > img {
    /* static img size, adjust with media query instead */
    width: 320px;
    height: var(--min-header-height);
    object-fit: cover;
    object-position: center;
    filter: brightness(0.9);

    transform-origin: left center;
    transform: scale(1.2);
}

.name-heading {
    position: absolute;
    /* pos calc so that name text takes the correct size after image is scaled */
    bottom: calc(-0.1 * var(--min-header-height));
    right: calc(-0.2 * 320px);
    left: 0;
    text-align: center;
    color: white;
    padding: 0 10px;
}

.self-desc > h2 {
    padding: 26px 20px 16px;
}

.self-desc > p {
    padding: 0 20px 70px;
    line-height: 1.5;
}

.drop-shadow {
    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
}

.small-icon {
    width: 20px;
    height: 20px;
}

.medium-icon {
    width: 30px;
    height: 30px;
}

.large-icon {
    width: 38px;
    height: 38px;
}

.icon {
    transition: scale 0.1s ease-out, opacity 0.1s ease-out;
}

.icon:hover {
    scale: 1.1;
    opacity: 0.8;
}

.socials-icon-group {
    display: flex;
    gap: 15px;
}

.header-icon-group {
    position: absolute;
    right: 20px;
    bottom: 15px;
}

/* main */

main {
    padding: 0 50px 0;
}

main > h2 {
    margin-bottom: 10px;
}

.projects {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
    gap: 30px;
}

.project-item {
    border-radius: 5px;
    overflow: hidden;       /* used to hide sharp corners */
}

.project-screenshot {
    height: 190px;
    background-color: cornflowerblue;
    color: white;
    font-size: 1.5rem;
    
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.project-info {
    padding: 0 16px 8px;
}

.project-header{
    padding: 8px 0;
    display: flex;
    justify-content: space-between;
}

.icon-group {
    display: flex;
    gap: 10px;
}

.project-info > p {
    height: 80px;
    overflow-y: auto;
}

/* footer */

footer {
    margin-top: 60px;
    padding: 36px 50px;
    background-color: var(--secondary-color);

    display: flex;
    gap: 20px;
}

footer h2, footer p {
    color: white;
}

.contact-me {
    width: 380px;
}

.floated-right {
    flex: 1;
    height: 350px;
}

.floated-right > img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.contact-me > h2,
.contact-me > div {
    padding-bottom: 20px;
}

.footer-icon-group {
    gap: 24px;
}

.contact-details > div {
    display: flex;
    align-items: center;
    gap: 8px;
}

.invert-color {
    filter: invert(1);
}

/* media queries */

@media (min-width: 601px) and (max-width: 1000px) {
    /* header */

    header {
        padding-top: 120px;
        padding-bottom: 60px;
    }

    .floated-left {
        margin: unset;
        /* margins calc so that text on right wrap properly after image is translated */
        margin-bottom: -90px;   
    }

    .floated-left > img {
        /* (no change) width: 320px, height: var(--min-header-height) */
        transform: none;
        transform-origin: unset;
        transform: translate(-25px, -90px);
    }

    .name-heading {
        top: -70px;
        right: 25px;
        left: -25px;
        bottom: unset;
        transform: translateX(80%);
    }

    .self-desc > h2 {
        padding-top: 60px;
        text-align: center;
    }

    .self-desc > p {
        padding-bottom: 50px;
    }

    header .socials-icon-group {
        display: none;
    }

    /* footer */

    footer {
        margin-top: 200px;
        align-items: center;
    }
}

@media (max-width: 600px) {
    h1 {
        font-size: 3rem;
    }

    h2 {
        font-size: 2.2rem;
    }
    
    /* header */

    header {
        padding-top: 20px;
        padding-left: 28px;
        padding-right: 28px;
    }

    .floated-left {
        float: unset;
        margin: unset;
    }

    .floated-left > img {
        width: 100%;
        height: 500px;
        transform: none;
    }

    .name-heading {
        bottom: 0;
        right: 0;
        left: 0;
    }

    .self-desc > h2 {
        text-align: center;
        padding-bottom: 10px;
    }

    .self-desc > p {
        padding: 0 0 10px;
        margin-left: -8px;
        margin-right: -8px;
    }

    .self-desc.drop-shadow {
        box-shadow: unset;
    }

    header .socials-icon-group {
        justify-content: center;
        gap: 20px;
    }

    .header-icon-group {
        position: unset;
        right: unset;
        bottom: unset;
    }

    /* main */

    main {
        padding-left: 20px;
        padding-right: 20px;
    }

    main > h2 {
        text-align: center;
    }

    /* footer */

    footer {
        margin-top: 160px;
        padding: 20px 0 0;
        
        display: block;
        gap: unset;
    }

    .contact-me {
        width: unset;
        padding: 0 20px 50px;
    }

    .contact-me > h2 {
        text-align: center;
        padding-bottom: 8px;
    }

    h2 + div > p {
        font-size: 1.2rem;
    }

    .footer-icon-group {
        justify-content: center;
    }

    .floated-right {
        flex: unset;
        height: 500px
    }

    .contact-details img {
        display: none;
    }
}

